chore: add register method, refactoring queries to retrieve data by user_id, update swaggers docs and add default error to unauthenticated access
