# routes/api.php
@@ -2,12 +2,13 @@
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\TaskController;
+use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
+Route::post('register', [AuthController::class, 'register'])->name('register');
 Route::post('login', [AuthController::class, 'login'])->name('login');
 Route::post('logout', [AuthController::class, 'logout'])->middleware(['auth:sanctum']);
 
-Route::middleware(['auth:sanctum'], \App\Http\Middleware\EnsureAuthenticated::class)->group(function () {
-
+Route::middleware(['auth:sanctum'])->group(function () {
     Route::apiResource('tasks', TaskController::class);
 });
